<resources>
  <string name="app_name">Stock Hawk</string>

  <!-- Settings action located in the overflow menu of the app bar -->
  <string name="action_settings">Settings</string>

  <!-- Title for the action to change the monetary units, located in the app bar -->
  <string name="action_change_units">Change Units</string>

  <!-- Title for the dialog used when searching for a new stock to add -->
  <string name="symbol_search">Symbol Search</string>

  <!-- Content for the dialog used when searching for a new stock to add -->
  <string name="symbol_search_content">Search for a Stock Symbol</string>

  <!-- TextView showing when the stocks were last updated (ex. Last updated 5 minutes ago) -->
  <string name="last_updated">Last updated %1$d %2$s ago</string>

  <!-- Minutes text used in the last_updated string resource  -->
  <string name="time_minutes">minutes</string>

  <!-- Hours text used in the last_updated string resource  -->
  <string name="time_hours">hours</string>

  <!-- Days text used in the last_updated string resource  -->
  <string name="time_days">days</string>

  <!-- Hint for the input field used when searching for a new stock to add. The hint is a stock symbol -->
  <string name="input_hint" translatable="false">FB</string>

  <!-- (This value is empty by design) Prefill value for the input field used when searching for a new stock to add. -->
  <string name="input_prefill"/>

  <!-- Toast message displayed when there is no connection to the internet present -->
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>

  <!-- Toast message displayed when the stock to be added has already been saved -->
  <string name="stock_is_already_saved_toast">This stock is already saved!</string>

  <!-- Toast message displayed when there is no stock found that corresponds to given stock symbol -->
  <string name="stock_not_found_toast">Stock not found</string>

  <!-- Accessibility Description for the FAB (Floating Action Button) to add a new stock -->
  <string name="accessibility_add_new_stock">Add new stock</string>

  <!-- Stock Bid Price label in the Line Graph Activity -->
  <string name="stock_label_bid_price">Bid Price:</string>

  <!-- Stock Book Value label in the Line Graph Activity -->
  <string name="stock_label_book_value">Book Value:</string>

  <!-- Stock Days Low label in the Line Graph Activity -->
  <string name="stock_label_days_low">Days Low:</string>

  <!-- Stock Days High label in the Line Graph Activity -->
  <string name="stock_label_days_high">Days High:</string>

  <!-- Stock Year Low label in the Line Graph Activity -->
  <string name="stock_label_years_low">Year Low:</string>

  <!-- Stock Year High label in the Line Graph Activity -->
  <string name="stock_label_years_high">Year High:</string>

  <!-- Stock Market Cap label in the Line Graph Activity -->
  <string name="stock_label_market_cap">Market Cap:</string>

  <!-- Stock Dividend Yield label in the Line Graph Activity -->
  <string name="stock_label_dividend_yield">Dividend Yield:</string>

  <!-- Text that is shown on the StockChartActivity when a stock value is not available -->
  <string name="stock_value_not_available">N/A</string>

  <!-- Text shown in the Stocks Widget the collection is empty-->
  <string name="no_stocks">No Stocks</string>

</resources>
