<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/stock_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Apple Inc. (APPL)"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/stock_label_bid_price"
                />
            <TextView
                android:id="@+id/stock_bid_price_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="113.46"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/stock_label_book_value"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:id="@+id/stock_book_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="23.46"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/stock_label_days_low"
                />
            <TextView
                android:id="@+id/stock_days_low_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="112.69"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/stock_label_days_high"
                />
            <TextView
                android:id="@+id/stock_days_high_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="113.66"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/stock_label_years_low"
                />
            <TextView
                android:id="@+id/stock_year_low_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="89.47"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/stock_label_years_high"
                />
            <TextView
                android:id="@+id/stock_year_high_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="123.82"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/stock_label_market_cap"
                />
            <TextView
                android:id="@+id/stock_market_cap_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="609.16B"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/stock_label_dividend_yield"
                />
            <TextView
                android:id="@+id/stock_dividend_yield_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="2.02"/>
        </LinearLayout>
    </LinearLayout>

    <com.db.chart.view.LineChartView
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>